Awesome Font Icons First Commit

--- a/02-HTML_CSS_Layout/Unsolved/html-bio-with-css.html
+++ b/02-HTML_CSS_Layout/Unsolved/html-bio-with-css.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="./CSS/style.css">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale-1.0">
-  <link rel="stylesheet" href="../../../../Font Awesome Icons/font-awesome-4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="../../Font Awesome Icons/font-awesome-4.7.0/css/font-awesome.min.css">
 
   <title>CSS Stylesheets with Relative Paths</title>
 </head>
