Bootstrap JsQuery Assignment Fist Commit

--- a/02-HTML_CSS_Layout/Unsolved/html-bio-with-css.html
+++ b/02-HTML_CSS_Layout/Unsolved/html-bio-with-css.html
@@ -16,10 +16,13 @@
   </header>
 
 
+  <!--Main Bio-->
 
   <div class="container">
     <section id="main-bio">
       <h2 id="name">Joel Jimenez</h2>
+
+      <!--Bio Image-->
 
       <img id="bio-image" src="2neon_ribbons_4k_2-1920x1080.jpg" alt="Digital Neon Ribbons" />
 
@@ -38,6 +41,8 @@
         section 1.10.32.<a href="http://www.lipsum.com/">www.lipsum.com</a>
       </p>
     </section>
+
+    <!--Contact Information-->
 
     <section id="contact-info">
       <h2>Contact Info</h2>
@@ -62,6 +67,10 @@
       </ul>
     </section>
   </div>
+
+
+
+
 </body>
 
 </html>
